kubernetes/apps/networking/nginx/internal/manifests/opnsense/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: opnsense
  namespace: networking
spec:
  ports:
    - protocol: TCP
      port: 443
---
apiVersion: v1
kind: Endpoints
metadata:
  name: opnsense
  namespace: networking
subsets:
  - addresses:
      - ip: 10.0.10.1
    ports:
      - port: 8443
