kubernetes/apps/networking/nginx/internal/manifests/opnsense/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: opnsense
  namespace: networking
  annotations:
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
spec:
  ingressClassName: internal
  rules:
    - host: &host opnsense.${SECRET_DOMAIN}
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: opnsense
                port:
                  number: 443
  tls:
    - hosts:
        - *host
